--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
 
 
         <div class="actions">
-          <%= f.submit "Sign up", class: "log-button" %>
+          <%= f.submit "Sign up", class: "button_insta" %>
         </div>
 
       <% end %>
