--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <p>
     <strong>User:</strong>
     <%= post.user_id %>
-    <%= cl_image_tag post.photo.key %>
+    <%= image_tag post.photo %>
   </p>
 
 </div>
